EKS/backendDeploymentService.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tfg-backend-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tfg-backend
  template:
    metadata:
      labels:
        app: tfg-backend
    spec:
      containers:
        # Contenedor de php
        - name: php-container
          image: bego13/tfg-php:latest
        - name: nginx-back-container
          image: bego13/tfg-nginx-back:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: tfg-backend-service
spec:
  selector:
    app: tfg-backend # Debe coincidir exactamente con el label del Deployment
  ports:
    - protocol: TCP
      port: 80         
      targetPort: 80 # Puerto donde escucha Symfony (el que pusimos en Docker)
  #type: ClusterIP      # solo visible dentro del clúster, es decir solo el frontend podra acceder a el (back)
  type: LoadBalancer
