EKS/frontenfDeployService.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tfg-frontend-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tfg-frontend
  template:
    metadata:
      labels:
        app: tfg-frontend
    spec:
      containers:
        - name: react-container
          image: bego13/tfg-frontend:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: tfg-frontend-service
spec:
  selector:
    app: tfg-frontend
  ports:
    - protocol: TCP
      port: 80        # Puerto por el que entrarás desde el navegador
      targetPort: 80  # Puerto donde escucha tu Nginx
  #type: LoadBalancer  # Esta será la URL pública para entrar a tu web
  type: ClusterIP      # ponemos clusterIp porque el unico punto de entrada "público" es el ingress y este redirige al frontend
