EKS/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tfg-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    # El cert-manager es para que gestione el certificado para el https el solo y así no lo tenemos que hacer en el nginx.conf
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - begonya.work.gd
      secretName: tfg-tls
      # Enrutamiento para el backend con el dominio/api y para el frontend con el dominio/
  rules:
    - host: begonya.work.gd
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: tfg-backend-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tfg-frontend-service
                port:
                  number: 80
